--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,23 +1,41 @@
-name: Teste de API com Rest Assured
+name: Java CI para executar o teste e salvar o report no gh-pages.
+
 on:
   push:
-    branches: [ "main" ] 
 jobs:
   build:
-  
     runs-on: ubuntu-latest
-  
+
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up JDK 17
-      uses: actions/setup-java@v4
-      with:
-        java-version: '17'
-        distribution: 'temurin'
-        cache: maven
-      
-    - name: Test Execution
-      run: mvn clean test
-        
-    - name: Test Report Generation
-      uses: actions/upload-artifact@v4
+      - uses: actions/checkout@v2
+      - name: Set up JDK 11
+        uses: actions/setup-java@v2
+        with:
+          java-version: '11'
+          distribution: 'adopt'
+
+      - name: Build and exec tests with Maven
+        run: mvn test 
+        continue-on-error: true
+
+      - name: Get allure history
+        uses: actions/checkout@v2
+        continue-on-error: true
+        with:
+          ref: gh-pages
+          path: gh-pages
+
+      - name: Allure Report action
+        uses: simple-elf/allure-report-action@master
+        with:
+          allure_results: target/allure-results
+          allure_history: allure-history/allure-history
+          keep_reports: 5
+
+      - name: Deploy report to Github Pages
+        if: github.ref == 'refs/heads/master'
+        uses: JamesIves/github-pages-deploy-action@4.1.4
+        with:
+          access_token: ${{ secrets.GITHUB_TOKEN }}
+          branch: gh-pages
+          folder: allure-history/allure-history
