--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,33 +1,36 @@
-name: Java CI para executar o teste e salvar o report no gh-pages.
+name: Testes RestAssured
 
 on:
   push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
+
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
-      - name: Set up JDK 11
-        uses: actions/setup-java@v2
-        with:
-          java-version: '11'
-          distribution: 'adopt'
+    # 1. Checkout do código
+    - name: Check out o código
+      uses: actions/checkout@v2
 
-      - name: Build and exec tests with Maven
-        run: mvn clean test 
-        continue-on-error: true
+    # 2. Configuração do JDK (Java)
+    - name: Configurar JDK 11
+      uses: actions/setup-java@v2
+      with:
+        java-version: '11'
+        distribution: 'adoptopenjdk'
 
-      - name: Get allure history
-        uses: actions/checkout@v2
-        continue-on-error: true
-        with:
-          ref: gh-pages
-          path: gh-pages
+    # 3. Instalar o Maven (se não estiver usando o Gradle)
+    - name: Instalar Maven
+      uses: actions/setup-java@v2
+      with:
+        java-version: '11'
+        maven-version: '3.8.4'
 
-      - name: Allure Report action
-        uses: simple-elf/allure-report-action@master
-        with:
-          allure_results: target/allure-results
-          allure_history: allure-history/allure-history
-          keep_reports: 5
+    # 4. Baixar dependências e rodar os testes
+    - name: Executar testes com Maven
+      run: mvn clean test -DskipTests=false
