--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -17,14 +17,14 @@ jobs:
     - name: Check out o código
       uses: actions/checkout@v2
 
-    # 2. Configuração do JDK (Java)
+    # 2. Configuração do JDK (Java) com Adoptium (temurin)
     - name: Configurar JDK 11
       uses: actions/setup-java@v2
       with:
         java-version: '11'
-        distribution: 'adoptopenjdk'
+        distribution: 'temurin'  # Mudança aqui de 'adoptopenjdk' para 'temurin'
 
-    # 3. Instalar o Maven (se não estiver usando o Gradle)
+    # 3. Instalar Maven
     - name: Instalar Maven
       uses: actions/setup-java@v2
       with:
