--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -17,20 +17,19 @@ jobs:
     - name: Check out o código
       uses: actions/checkout@v2
 
-    # 2. Configuração do JDK (Java) com Adoptium (temurin)
+    # 2. Configuração do JDK 11 usando a distribuição Adoptium (temurin)
     - name: Configurar JDK 11
       uses: actions/setup-java@v2
       with:
         java-version: '11'
-        distribution: 'temurin'  # Mudança aqui de 'adoptopenjdk' para 'temurin'
+        distribution: 'temurin'  # Mudança aqui para 'temurin'
 
-    # 3. Instalar Maven
+    # 3. Instalar Maven manualmente (se necessário)
     - name: Instalar Maven
-      uses: actions/setup-java@v2
-      with:
-        java-version: '11'
-        maven-version: '3.8.4'
+      run: |
+        sudo apt-get update
+        sudo apt-get install maven
 
-    # 4. Baixar dependências e rodar os testes
+    # 4. Baixar dependências e rodar os testes com Maven
     - name: Executar testes com Maven
       run: mvn clean test -DskipTests=false
