--- a/pom.xml
+++ b/pom.xml
@@ -73,11 +73,12 @@
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M5</version>
                 <configuration>
-                    <source>17</source>
-                    <target>17</target>
+                    <includes>
+                        <include>**/Test*.java</include> <!-- Garante que o Maven encontre testes com nome Test*.java -->
+                    </includes>
                 </configuration>
             </plugin>
         </plugins>
