--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
         java-version: '17'
         distribution: 'temurin'  # Usa a distribuição Temurin para JDK 17
 
-    # 3. Instalar Maven (se necessário)
+    # 3. Instalar Maven
     - name: Instalar Maven
       run: |
         sudo apt-get update
@@ -32,4 +32,4 @@ jobs:
 
     # 4. Baixar dependências e rodar os testes com Maven
     - name: Executar testes com Maven
-      run: mvn clean test -DskipTests=false
+      run: mvn clean test 
